# trustyai-sdk

./: API.md  README.md  local_eval_demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  docs.yml  pytest.yml  ruff.yml
docs/: antora.yml
docs/docs/modules/ROOT/: nav.adoc
docs/docs/modules/ROOT/pages/: api-core.adoc  api-kubernetes.adoc  cli-eval.adoc  cli-overview.adoc  examples-kubernetes.adoc  examples-local.adoc  getting-started.adoc  index.adoc  installation.adoc  kubernetes.adoc  providers.adoc
examples/: lmevaljob_cr_generation.ipynb  local_eval_demo.ipynb  trustyai_cli_usage_demo.ipynb  validators.ipynb
tests/: test_kubernetes.py  test_lmevaljob.py  test_trustyai_kubernetes_client.py
trustyai/: __init__.py  _version.py  cli.py
trustyai/core/: __init__.py  eval.py  kubernetes.py  lmevaljob.py  models.py  providers.py  registry.py  trustyai_kubernetes_client.py
trustyai/core/validators/: __init__.py  kubernetes.py  local.py  registry.py
trustyai/providers/: __init__.py
trustyai/providers/eval/: __init__.py  lm_eval.py  lm_eval_base.py  lm_eval_kubernetes.py  lm_eval_local.py  utils.py
trustyai/utils/: __init__.py  metrics.py
