[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "trustyai"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rui Vieira", email = "rui@redhat.com"},
]
description = "TrustyAI SDK"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Click==8.1.7",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "httpx>=0.20.0",
    "ruff>=0.5.0",
    "kubernetes>=24.0.0",
    "toml>=0.10.0",
    "colorama>=0.4.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "packaging>=23.0.0",
    "pydantic-settings>=2.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
eval = [
    "lm-eval[api]==0.4.2",
    "transformers>=4.21.0",
    "torch>=1.12.0",
    "accelerate>=0.20.0",
    "datasets>=2.0.0",
]
all = [
    "trustyai[eval]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "types-requests",
    "types-PyYAML",
    "bandit[toml]>=1.7.0",
]

[project.scripts]
trustyai = "trustyai.cli:main"

[project.urls]
Homepage = "https://github.com/trustyai-explainability/trustyai-sdk"
Repository = "https://github.com/trustyai-explainability/trustyai-sdk.git"
Documentation = "https://github.com/trustyai-explainability/trustyai-sdk"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "trustyai/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/examples",
    "/.vscode",
    "/.ruff_cache",
    "/.mypy_cache",
    "/.pytest_cache",
]

[tool.hatch.build.targets.wheel]
packages = ["trustyai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C4", "PIE", "SIM", "RET", "PTH"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__", ".git", "examples"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"] 